# ROB3-CrustCrawler

Arduino-CrustcrawlerL/: Arduino-CrustcrawlerL.ino  myArduino.h
Arduino/Arduino-Crustcrawler/: Arduino-Crustcrawler.ino  Arduino-CrustcrawlerL.ino
Arduino/EMG_Proccesing/emg_data/: Readme.md
Arduino/EMG_Proccesing/emg_data/src/: emg_data.cpp
Controller - Arduino/CrustCrawler-Controller/: CrustCrawler-Controller.ino
Controller - Arduino/Dynamic-Controller/: Dynamic-Controller.ino
Libraries /Dynamixel_Serial/: Dynamixel_Serial.cpp  Dynamixel_Serial.h
Maple-Matlab/: InverseSimulation.m  dynamics_gr365.mw
ROB3-CrustCrawler/: README.md
ROS - PC/emg_data/: CMakeLists.txt
ROS - PC/emg_data/include/: EmgArray.h
ROS - PC/emg_data/src/: emg_data.cpp
ROS - PC/ros_myo/: CMakeLists.txt  myo-firmware-1.1.4-revd.hex
ROS - PC/ros_myo/scripts/: emg_publisher.py
ROS/EMG_Proccesing/emg_data/: CMakeLists.txt  package.xml
ROS/EMG_Proccesing/emg_data/src/: emg_data.cpp
ROS/emg_data/: package.xml
ROS/emg_data/src/: emg_data.cpp
ROS/ros_myo/launch/: emg.launch
ROS/ros_myo/scripts/: Emgdata.py  myo-rawNode.py
